[package]
name = "spectate"
version = "0.0.1"
edition = "2021"
description = "coming soon"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
tokio = { version = "1.16.1", features = [ "macros",  "rt-multi-thread"] }
tokio-stream = "0.1.8"
env_logger = "0.9.0"
log = "0.4.14"
tonic = "0.6.2"
futures-util = "0.3.21"


[build-dependencies]
prost-build = "0.9.0"
tonic-build = "0.6.2"
